[tool.poetry]
name = "dolores"
version = "0.1.0"
description = "Automation service for genomics center"
authors = ["moonso <mans.magnusson@scilifelab.se>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
SQLAlchemy = "^1.3.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
